Make codeblock fonts monospace

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -4,6 +4,10 @@
   font-family: "Outfit";
 }
 
+code * {
+  font-family: monospace !important;
+}
+
 /* misery */
 :root {
   --vp-c-brand-1: ##6284f2;
